change in html css file

--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background-image: url('img/bg.jpg'), url('img/img6.jpg');
+        background-image: url('img/bg.jpg');
         background-size: cover;
+        background-repeat: no-repeat;
+        
+
     }
+    @media screen and (max-width: 800px) {
+       .left, .mid, .right {
+        width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+     }
 </style>
 <body>
     <header class="header">
@@ -45,17 +52,17 @@
 
         </div>
     </header>
-    <footer>
+    <footter>
     <div class="details">
-        <p>Create The Strongest Version of Yourself!!!</p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>Create The <br>Strongest Version <br>of Yourself !!!</p>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <h1>Our Social Networks</h1>
         <h4>Join us on our social networks and <br> keep up to date on the latest fitness news.</h4>
         <a href="https://www.facebook.com">
         <img src="img/fb-logo.png" alt="footer-logo"></a>
         <a href="https://www.facebook.com/instagram/">
         <img src="img/insta-logo.svg" alt="footer-logo"></a>
-        <a href="https://www.linkedin.com/help/linkedin/answer/a523215/linkedin-homepage-overview?lang=en"></a>
+        <a href="https://www.linkedin.com "></a>
         <img src="img/ln-logo.png" alt="footer-logo">
         <a href="https://gmail.google.com/inbox/">
         <img src="img/g-logo.png" alt="footer-logo"></a>
