--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         
 
     }
-    @media screen and (max-width: 800px) {
+    /* @media screen and (max-width: 800px) {
        .left, .mid, .right {
-        width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-     }
+        width: 100%; The width is 100%, when the viewport is 800px or smaller 
+     } */
 </style>
 <body>
     <header class="header">
